--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Cors==5.0.0
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.0.3
+Flask-Bcrypt==0.7.1
 greenlet==3.1.1
 gunicorn==23.0.0
 importlib_metadata==8.5.0
